<resources>
    <string name="app_name">MemeFun</string>
    <string name="new_user_signup">No have an account yet ?<b> Sign Up!</b> </string>
    <string name="memefun">Meme<font fgcolor="#FFBE33">Fun</font></string>
    <string name="type_your_name_here">Insert your full name</string>
    <string name="type_your_email_here">Insert an email valid</string>
    <string name="type_your_password_here">Insert a password</string>
    <string name="type_your_confirm_password">confirm your password</string>
    <string name="logo_of_memefun">Logo of MemeFun</string>
    <string name="register">Register</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="meme_fun_logo">MemeFun Logo</string>
    <string name="text_sign_in">Text sign in</string>
    <string name="sign_in">Sign in</string>
    <string name="insert_your_email">Insert your email</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="login">Login</string>
    <string name="full_name">full name</string>
    <string name="sign_up">Sign up</string>
    <string name="background">background</string>
    <string name="profile_image">Profile Image</string>
    <string name="username">username</string>
    <string name="edit_button">Edit button</string>
</resources>