<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="16dp"
    tools:context=".screens.login.ui.LoginActivity">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="72dp"
        android:layout_height="68dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="177dp"
        android:layout_height="66dp"
        android:contentDescription="@string/text_sign_in"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginBottom="485dp"
        android:autofillHints="t"
        android:background="@drawable/background_rounded_input"
        android:ems="10"
        android:hint="@string/insert_your_email"
        android:importantForAutofill="auto"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColorHint="@color/gray01"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/type_your_email_here"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="73dp"
        android:layout_height="23dp"
        android:layout_marginTop="31dp"
        android:contentDescription="@string/password"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginBottom="362dp"
        android:autofillHints=""
        android:background="@drawable/background_rounded_input"
        android:ems="10"
        android:hint="@string/type_your_password_here"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@color/gray01"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/main_blue"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_goneMarginTop="10dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/new_user_signup"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>