<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="8dp"
    tools:context=".screens.register.ui.RegisterActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="68dp"
        android:layout_height="79dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="128dp"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="552dp"
        android:lineSpacingExtra="0dp"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@id/imageView5" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:contentDescription="@string/full_name"
        android:text="@string/full_name"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:text="@string/full_name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/background_rounded_input"
        android:hint="@string/type_your_name_here"
        android:padding="10dp"
        android:textColorHint="@color/gray01"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />


    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/email"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText"
        tools:text="@string/email" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/background_rounded_input"
        android:ems="10"
        android:layout_marginLeft="16dp"
        android:padding="10dp"
        android:hint="@string/insert_your_email"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/gray01"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/password"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2"
        tools:text="@string/password" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/background_rounded_input"
        android:ems="10"
        android:hint="@string/type_your_password_here"
        android:inputType="textPassword"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:textColorHint="@color/gray01"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/confirm_password"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textStyle="bold"

        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
        tools:text="@string/confirm_password" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/background_rounded_input"
        android:ems="10"
        android:hint="@string/type_your_confirm_password"
        android:inputType="textPassword"
        android:textColorHint="@color/gray01"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/main_blue"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword3"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3" />

</androidx.constraintlayout.widget.ConstraintLayout>